# IBIS-AGI-TRADER

./: .gitignore  =11.0.0  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  DEVELOPERS.md  DEVELOPMENT.md  Dockerfile  FINAL_STATUS.md  GITHUB_LAUNCH_GUIDE.md  IBIS_BANNER.txt  LICENSE  MANIFEST.md  Makefile  PRE_PUSH_VERIFICATION.sh  PRODUCTION_READINESS.md  PROJECT_STATUS.txt  QUICKREF.md  README.md  SANITIZATION_POLICY.md  SECURITY_CHECKLIST.md  SYSTEM_INTEGRATION_REPORT.md  YOU_ARE_HERE.md  agent_watchdog.sh  analyze_round_trip_trades.py  audit_logging.py  audit_logging_report.md  batch_monitor.sh  calculate_accurate_pnl.py  check_agent_health.sh  docker-compose.yml  fetch_last_5_trades.py  fix_logger_initialization.py  fix_trade_history.py  ibis_247_monitor.sh  ibis_final_status_report.md  ibis_system_verification_report.md  ibis_true_agent.py  (+30 more)
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: tests.yml
archive/: README.md
archive/analysis/: advanced_intelligence.py  analyze_capital.py  analyze_execution.py  analyze_execution2.py  analyze_system_logic.py  enhanced_execution.py  (+6 more)
data/: account_history.json  ibis_memories.json  ibis_true.out  ibis_v8.out  trade_history.json
deploy/: ibis-exec-integrity.service  ibis-exec-integrity.timer  ibis-healthcheck.service  ibis-healthcheck.timer  ibis-hourly-kpi.service  ibis-hourly-kpi.timer  ibis-log-retention.service  ibis-log-retention.timer  ibis.service
docs/: ARCHITECTURE.md  CHANGES.md  CONFIG.md  DEVELOPMENT.md  OPERATIONS_24_7.md  QUICKSTART.md  README.md  TROUBLESHOOTING.md  advanced_intelligence.md
examples/: README.md
ibis/: .env.example  __init__.py  advanced_intelligence.py  agent_controller.py  agent_server.py  aggregator.py  analytics.py  config.json  cross_exchange_monitor.py  data_consolidation.py  enhanced_intel.py  free_intelligence.py  intel_enhancement.py  keys.env.example  market_cache.py  market_funnel.py  market_intelligence.py  microstructure.py  orchestrator.py  pnl_tracker.py  position_rotation.py  regime.py  requirements.txt  setup_live.py  state_sync.py  storage.py  system_health.py  telemetry.py
tests/: README.md  audit_ibis.py  test_agi_core.py  test_agi_enhancements.py  test_enhanced.py  test_hyper_mode.py  test_hypertrading.py
tools/: bootstrap_service_credentials.sh  check_credentials_source.sh  deep_state_audit.py  execution_econ_report.py  execution_integrity_check.py  hourly_kpi_report.py  liquidity_trade_audit.py  log_retention_maintenance.sh  monitor_performance.py  project_dashboard.py  provision_kucoin_credentials.sh  reconcile_state_db.py  sync_trade_history_to_db.py  truth_snapshot.py
(+144 files in other folders)
